--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,70 +15,61 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="2">
-     <widget class="QLCDNumber" name="blockSizeLcd">
-      <property name="numDigits">
-       <number>10</number>
-      </property>
-      <property name="intValue" stdset="0">
-       <number>1</number>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2" rowspan="6">
+    <item row="0" column="0" colspan="3">
      <widget class="QwtPlot" name="plot"/>
     </item>
     <item row="1" column="0">
-     <widget class="QSlider" name="blockSizeSlider">
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>10000000</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Data size</string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QSlider" name="blocksCountSlider">
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>10000</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-     </widget>
+     <widget class="QLineEdit" name="dataSizeEdit"/>
     </item>
-    <item row="2" column="0" colspan="2">
-     <widget class="QLCDNumber" name="blocksCountLcd">
-      <property name="intValue" stdset="0">
-       <number>1</number>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0" colspan="2">
+    <item row="1" column="2">
      <widget class="QPushButton" name="startCPUButton">
       <property name="text">
        <string>Start CPU</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="0" colspan="2">
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Threads count</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="threadsCountEdit"/>
+    </item>
+    <item row="2" column="2">
      <widget class="QPushButton" name="startGPUButton">
       <property name="text">
        <string>Start GPU</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="0" colspan="2">
+    <item row="3" column="2">
      <widget class="QPushButton" name="stopButton">
       <property name="text">
        <string>Stop</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="dataPerThread">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Data per thread</string>
       </property>
      </widget>
     </item>
@@ -93,39 +84,14 @@
    <header>qwt_plot.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>dataSizeEdit</tabstop>
+  <tabstop>threadsCountEdit</tabstop>
+  <tabstop>dataPerThread</tabstop>
+  <tabstop>startCPUButton</tabstop>
+  <tabstop>startGPUButton</tabstop>
+  <tabstop>stopButton</tabstop>
+ </tabstops>
  <resources/>
- <connections>
-  <connection>
-   <sender>blockSizeSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>blockSizeLcd</receiver>
-   <slot>display(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>23</x>
-     <y>147</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>51</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>blocksCountSlider</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>blocksCountLcd</receiver>
-   <slot>display(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>72</x>
-     <y>147</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>60</x>
-     <y>327</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
